--- a/Club/templates/base.html
+++ b/Club/templates/base.html
@@ -17,7 +17,9 @@
 </div> 
 <ul class="nav navbar-nav"> 
 <li><a href="{% url 'getResource' %}">Resources</a></li>
-<li><a href="{% url 'getMeeting' %}">Meeting</a></li> 
+<li><a href="{% url 'getMeeting' %}">Meeting</a></li>
+<li><a href="{% url 'newResource' %}">newResource</a></li>
+<li><a href="{% url 'newMeeting' %}">newMeeting</a></li>
 </ul> 
 </div> 
 </nav> 
